test/sema/trait_objects/coerce_ptr_to_impl_inst_err.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait A {}

trait B {}

struct S {
  impl A;
}

struct S2 {
  x: *impl A
  y: *impl B
}

fn main() {
  S2{ 
    // CHECK: [[# @LINE + 1 ]]:8: error: cannot unify '*mut S' with '*impl A'
    x: gcMut(S{}),

    // CHECK: [[# @LINE + 1 ]]:8: error: cannot satisfy constraint 'S : B'
    y: gc(S{}),
  };
}
